# Applows

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.ja.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: design.md  language.md
examples/: fileops.aplo  greet.aplo  provision.aplo  tour.aplo
skills/: SKILL.md
src/: ast.rs  bootstrap.rs  builtins.rs  diagnostic.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  sema.rs  skill.rs  token.rs  verify.rs
src/emit/: common.rs  escape.rs  mod.rs  powershell.rs  sh.rs
tests/: compile.rs  execution.rs  frontend.rs  golden.rs
tests/fixtures/: smoke.aplo
tests/golden/: smoke.polyglot.golden
