[package]
name = "applows"
version = "0.1.0"
edition = "2024"
description = "A shell-like language that compiles to a single polyglot script running natively on vanilla Windows 11 and macOS"
license = "MIT"
repository = "https://github.com/owayo/Applows"
readme = "README.md"
keywords = ["compiler", "transpiler", "polyglot", "cross-platform", "shell"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "applows"
path = "src/main.rs"

[lib]
name = "applows"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

[dev-dependencies]

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
